--- a/ecommerce_website/frontend/package.json
+++ b/ecommerce_website/frontend/package.json
@@ -1,12 +1,14 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "type": "module",
   "proxy": "http://127.0.0.1:8000/account_authentication/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
@@ -19,13 +21,16 @@
     "react-scripts": "^5.0.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
+    "vit": "^0.0.1",
+    "vite": "^4.4.6",
+    "vite-plugin-svgr": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +51,16 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.0"
   }
 }
