--- a/ecommerce_website/frontend/package.json
+++ b/ecommerce_website/frontend/package.json
@@ -5,6 +5,9 @@
   "proxy": "http://127.0.0.1:8000/account_authentication/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
