--- a/ecommerce_website/frontend/package.json
+++ b/ecommerce_website/frontend/package.json
@@ -14,6 +14,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "framer-motion": "^11.0.24",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
